--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
+  "name": "concesionario",
+  "version": "1.0.0",
+  "description": "Reserva de vehiculos de un concesionario",
+  "main": "index.ts",
+  "scripts": {
+    "dev": "ts-node index.ts ",
+    "start": "",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.21.1",
-    "morgan": "^1.10.0",
     "mysql2": "^3.11.3"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.7.4"
   }
 }
