--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Reserva de vehiculos de un concesionario",
   "main": "index.ts",
   "scripts": {
-    "dev": "ts-node index.ts ",
+    "dev": "nodemon -e ts, json --exec 'ts-node index.ts' ",
     "start": "",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
